# lab-website

./: README.md  stack.yaml  wanglab.cabal
compiler/: Main.hs
compiler/WangLab/: Compiler.hs  Context.hs
compiler/WangLab/Compiler/: Member.hs  Publication.hs
contents/: index.html  people.yml  publications.md
src/: Main.hs
src/WangLab/: Compiler.hs  Types.hs
templates/: default.html  footer.html  head.html  nav.html
web/contents/: contact.html  index.html  people.yml  positions.md  publications.md
web/static/css/: custom.css
web/templates/: default.html  footer.html  head.html  nav.html
